- fixed bug in tree.c: propagate implications on multi-aggregated should not be performed 
- fixed bugs in flatzinc readers with constraints that exclusively consist of constants
- fixed bug in reader_gms: correct handling of nonstandard bounds on general integer variables
- fixed bug in conflict.c in the method conflictsetAddBound() 

plugins:
- added constraint handler for second order cone constraints (cons_soc.(c|h))
- added packing/partitioning orbitope constraint handler for symmetry handling (cons_orbitope.<c/h>)
- added heuristic zirounding (heur_zirounding.{c,h})

parameters: 
- added parameter <misc/usesmalltables> which results in using smaller tables for names, cliques and cuts and improves the
  performace for smaller instances, default value FALSE 
- added parameter <misc/usevartable> and <misc/useconstable> which turns on/off the usage of hashtables mapping from 
  variable/constraint names to the variables/constraints; when turned off, SCIPfindVar() and SCIPfindCons() may not be used; 
  the hashtables can be turned off for subMIPs to improve the performance, default value TRUE
- removed parameter constraints/knapsack/maxnumcardlift and adapted setting files
- added parameter <reading/zplreader/usestartsol> which allows to switch ZIMPL start solutions off, default value TRUE
- added parameter <lp/simplexrowrep> telling simplex solver to use row representation of the basis (if possible), default value FALSE
- added parameter <heuristics/crossover/dontwaitatroot> that allows to call crossover at root node independently from nwaitingnodes

SCIP version 1.2.0
===============

interface:
- new parameter "mksetcoefsvalid" in lp.c: SCIPlpCalcMIR(), scip.c: SCIPcalcMIR(), and sepa_cmir.c: tryDelta() to store
  whether "mksetcoefs" computed in SCIPlpCalcMIR() is valid. If the mixed knapsack constraint obtained after aggregating LP rows 