@@ -59,6 +59,7 @@ fixed bugs:
 - fixed bugs in flatzinc readers with constraints that exclusively consist of constants
 - fixed bug in reader_gms: correct handling of nonstandard bounds on general integer variables
 - fixed bug in conflict.c in the method conflictsetAddBound() 
+- fixed "bug" in projects Makefiles w.r.t. "make clean"
 
 plugins:
 - added constraint handler for second order cone constraints (cons_soc.(c|h))
